--- a/birthday-brother/css/style_memory.css
+++ b/birthday-brother/css/style_memory.css
@@ -8,9 +8,9 @@
 }
 
 .bgcolor {
-	background: #79a8ae;
-    background: -webkit-linear-gradient(top left, #79a8ae 0%, #79a8ae 100%);
-    background: linear-gradient(to bottom right, #79a8ae 0%, #79a8ae 100%);
+	background: #ADD5A2;
+    background: -webkit-linear-gradient(top left, #ADD5A2 0%, #ADD5A2 100%);
+    background: linear-gradient(to bottom right, #ADD5A2 0%, #ADD5A2 100%);
     opacity: 0.9;
 }
 .bg-bubbles {
@@ -662,7 +662,7 @@
 
 /* 盒子 */
 .ly-box11 {
-	width: 30%;
+	width: 16%;
 	height: 600px;
 	border: 2px #CCC;
 	background-color: #fff;
@@ -735,7 +735,6 @@
 	font-color: #000;
 	position: absolute;
 	left: 3%;
-	top: 4%;
 	opacity: 0;
 	transition: all 0.5s;
 }
@@ -767,13 +766,13 @@
 /* 盒子 */
 .ly-box12 {
 	width: 40%;
-	height: 600px;
+	height: 850px;
 	border: 2px #CCC;
 	background-color: #fff;
 	background-color: rgba(255,255,255,0.6);
 	border-radius: 8px;
 	position: absolute;
-	left: 57%;
+	left: 47%;
 	top:10%;
 	overflow: hidden;
 	opacity: 0;
@@ -797,7 +796,7 @@
 	border-radius: 2px; 
 	margin-left: 24px;
 	position: absolute;
-	right: 43%;
+	right: 53%;
 	top: 14%;
 	opacity: 0;
 	-webkit-transform: scale(0.5, 0.5);
@@ -1095,7 +1094,7 @@
 	bottom:6%;
 	overflow: hidden;
 	opacity: 0.9;
-	transition: all 10s;
+	transition: all 4s;
 }
 .active .ly-box23{
 	height:600px;
@@ -1160,7 +1159,7 @@
 
 .active .ly-txt26 {
 	opacity:1;
-	transition-delay: 14s;
+	transition-delay: 12s;
 }
 /*图片*/
 .ly-imgbox23{
@@ -1211,7 +1210,7 @@
 }
 /* 盒子 */
 .ly-box31 {
-	width: 30%;
+	width: 10%;
 	height: 600px;
 	border: 2px #CCC;
 	background-color: #fff;
@@ -1298,12 +1297,9 @@
 .ly-txt32 {
 	font-family: Microsoft YaHei;
 	font-size: 20px;
-	text-indent:2em;
 	font-color: #000;
 	position: absolute;
 	padding-top: 20px;
-	left: 5%;
-	top: 12%;
 	opacity: 0;
 	transition: all 1s;
 }
@@ -1315,20 +1311,22 @@
 
 /* 盒子 */
 .ly-box32 {
-	width: 40%;
-	height: 400px;
+	width: 60%;
+	height: 600px;
 	border: 2px #CCC;
 	background-color: #fff;
 	background-color: rgba(255,255,255,0.6);
 	border-radius: 8px;
 	position: absolute;
-	left: 57%;
+	left: 37%;
 	top:10%;
 	overflow: hidden;
 	opacity: 0;
 	-webkit-transform: scale(0.5, 0.5);
 	transform: scale(0.5, 0.5);
 	transition: all 1s;
+	display: flex;
+	justify-content: center;
 }
 .active .ly-box32{
 	opacity: 0.9;
@@ -1346,7 +1344,7 @@
 	border-radius: 2px; 
 	margin-left: 24px;
 	position: absolute;
-	right: 43%;
+	right: 63%;
 	top: 14%;
 	opacity: 0;
 	-webkit-transform: scale(0.5, 0.5);
@@ -1402,7 +1400,7 @@
 	position: absolute;
 	bottom: 0;
 	width: 100%;
-	height: 70%;
+	height: 40%;
 	border-radius: 8px;
 	opacity:0;
 	overflow: hidden;
@@ -1415,6 +1413,7 @@
 .ly-img31{
 	position: absolute;
 	width: 100%;
+	height: 100%;
 	bottom: 0;
 }
 
@@ -1816,7 +1815,7 @@
 	position: absolute;
 	padding-top: 20px;
 	left: 5%;
-	top: 11%;
+	top: 5%;
 	opacity: 0;
 	transition: all 1s;
 }
@@ -2192,4 +2191,13 @@
 }
 .xx94 {
 	height:80%;
+}
+
+.horizontal div{
+	display: inline-block;
+}
+
+#wrap{
+    display: flex;
+	justify-content: flex-start;
 }
